--- a/src/Components/Card.css
+++ b/src/Components/Card.css
@@ -15,3 +15,14 @@
   .card-container:hover .custom-arrow-right {
     display: block;
   }
+
+  .btn-success {
+    display: flex;
+    justify-content: center; /* Center horizontally */
+    align-items: center; /* Center vertically */
+    padding: 0; /* Remove padding to keep the symbol centered */
+    width: 25px; /* Set a fixed width for the button, adjust as needed */
+    height: 25px; /* Set a fixed height for the button, adjust as needed */
+    border-radius: 50%; /* Make the button round */
+    font-size: 20px; /* Adjust font size as needed */
+  }
