--- a/src/Components/Card.css
+++ b/src/Components/Card.css
@@ -4,10 +4,9 @@
    
   .custom-arrow-right {
     position: absolute;
-    top: 100%;
-    left: 80%;
-    right: 0;
-    transform: translateY(-50%);
+    top: '50%';         
+    left: '50%';
+    transform: 'translate(-50%, -50%)';           
     z-index: 2;
     cursor: pointer;
   }
